Fix spacing issue with logo class. Adjust padding and margin of ul element

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -11,24 +13,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  flex: auto;
-  margin: 10px;
-  text-align: center;
 }
 
 ul {
   /* this removes the dots on the list items */
   list-style-type: none;
   display: flex;
-  margin: 5px;
-  padding: 5px;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
-  margin: 5px;
   /* this removes the line under the links */
   text-decoration: none;
 }
